--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ font-family: "freePixel";
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
     <link rel="stylesheet" href="css/styles.css?1">
     <title>God brought us here.</title>
+      <link rel="icon" type="image/x-icon" href="Images/Favicon.png">
   </head>
   
   <body> 
